# dingtalk-rs

./: .env.sample  .gitignore  Cargo.toml  README.md
examples/: department.rs  event_subscribe.rs  user.rs  work_notify.rs
src/: error.rs  lib.rs
src/client/: dto.rs  http.rs  mod.rs  model.rs  resp.rs
src/client/contact_manager/: mod.rs
src/client/contact_manager/department/: department.rs  dto.rs  mod.rs  model.rs
src/client/contact_manager/user/: dto.rs  mod.rs  model.rs  user.rs
src/client/department/: department.rs  dto.rs  mod.rs  model.rs
src/client/event_subscribe/: event_subscribe.rs  mod.rs  model.rs
src/client/message_notify/: message.rs  mod.rs
src/client/message_notify/work_notify/: dto.rs  mod.rs  model.rs  work_notify.rs
src/client/user/: dto.rs  mod.rs  model.rs  user.rs
