[package]
name = "dingtalk-rs"
version = "0.1.15"
edition = "2021"
description = "钉钉Rust版SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shenshouer/dingtalk-rs"
keywords = ["dingtalk", "rust"]

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1.56"
rand = "0.8.5"
base64 = "0.13.0"
aes = "0.8.1"
crypto = { version = "0.3.0", features = ["cipher"] }
cbc = "0.1.2"
block-padding = "0.3.2"
sha1 = "0.10.1"

[dev-dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
tracing-subscriber = "0.3.11"
